<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cafés Gent</string>
    <string name="explore_title">Ontdek trending cafés</string>
    <string name="detail_game_title">Details</string>
    <string name="back">Ga terug</string>
    <string name="search_icon">Zoek icoon</string>
    <string name="close_icon">Sluit icoon</string>
    <string name="searchbar_text">Zoek in Gentse cafés</string>
    <string name="history_icon">Geschiedenis icoon</string>
    <string name="explore">Ontdek</string>
    <string name="description_nl">Beschrijving (NL)</string>
    <string name="cafes_title">Cafés</string>
    <string name="loading">Aan het laden…</string>
    <string name="error">Er liep iets mis, probeer het later opnieuw.</string>
    <string name="description_en">Decription (EN)</string>
    <string name="description_de">Beschreibung (DE)</string>
    <string name="description_fr">Description (FR)</string>
    <string name="description_es">Descripción (ES)</string>
    <string name="website">Website</string>
    <string name="modified">Laatst gewijzigd op</string>
    <string name="not_found">Er werd geen café gevonden dat aan de zoekcriteria volstaat.</string>
    <string name="about">Over deze app</string>
    <string name="about_short">Info</string>
    <string name="navigation_rail">Navigeer hier tussen items</string>
    <string name="logo_Gent">Logo stad Gent</string>
    <string name="open_data_portal">Open Data Portaal</string>
    <string name="disclaimer_text">Deze applicatie gebruikt data van het open data portaal van de stad Gent. Het is daarom niet verantwoordelijk voor de data die het beschikbaar maakt.</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="contact">Indien u opmerkingen of vragen hebt, aarzal dan niet ons te contacteren via het voorziene formulier!</string>
    <string name="meer_informatie">Meer informatie over het Open Data Portaal kunt u terugvinden op: https://data.stad.gent/explore.</string>
    <string name="contact_title">Contact</string>
    <string name="form_button">Formulier invullen</string>
    <string name="navigate_to_adress">Navigeer naar café</string>
    <string name="error_icon">Error</string>
</resources>